force-app/main/default/objects/User_Visit__c/User_Visit__c.object-meta.xml
<CustomObject>
    <label>User Visit</label>
    <nameField>
        <displayFormat>USER-{0000}</displayFormat>
        <label>User Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>