force-app/main/default/objects/User_Visit__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Salesperson__r.IsActive</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>