force-app/main/default/objects/User_Visit__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Salesperson__r.CompanyName</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>