force-app/main/default/objects/User_Visit__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Salesperson__r.Division</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>