force-app/main/default/objects/User_Visit__c/fields/Sales_Person_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_s_Name__c</fullName>
    <formula>Salesperson__r.Name__c</formula>
    <label>Sales Person&apos;s Name</label>
    <type>Text</type>
</CustomField>