force-app/main/default/objects/User_Visit__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Salesperson__r.UserRole.Name</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>